# coi

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: build.yml
.kiro/specs/coi-refactor/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/local-knowledge-base/: .config.kiro  design.md  requirements.md  tasks.md
coi/: build.py  chunker.py  config.py  download_model.py  embedding.py  fqa.py  main.py  models.py  query.py  requirements.txt  scanner.py  setup.py  store.py
coi/tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_fqa.py  test_scanner.py
docs/: PACKAGING.md
local-knowledge-base/: SKILL.md
local-knowledge-base/references/: troubleshooting.md
local-knowledge-base/scripts/: kb.py  query.py  requirements.txt  scanner.py  setup_env.py  store.py
local-knowledge-skill/: SKILL.md
local-knowledge-skill/scripts/: chunker.py  embedding.py  fqa.py  sync.py
my/: chatGPT.md  claude.md  deepseek.md  zai.md  最终提案.md  需求.md
skill/coi-qa/: SKILL.md
src/: __init__.py  __main__.py  chunker.py  cli.py  fqa.py  models.py  query.py  scanner.py  store.py  sync.py
test/: 使用指南.md
test/knowledge_base/: 5g_technology.md  ai_doc.docx  ai_history.txt  blockchain.md  blockchain.rtf  chinese_culture.md  climate_change.txt  climate_doc.docx  countries.csv  programming.xlsx  programming_languages.csv  quantum_computing.txt  quantum_doc.docx  solar_system.csv  solar_system.xlsx  world.xlsx
tests/: conftest.py  test_chunker.py  test_query.py  test_scanner.py  test_sync.py
(+2 files in other folders)
