[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-knowledge-base"
version = "0.1.0"
description = "本地知识库 RAG CLI 工具 - 支持多格式文档向量化索引与语义检索"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "click>=8.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "PyPDF2>=3.0.0",
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.82.0",
]

[project.scripts]
kb = "src.cli:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
